<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android" >
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".Login">

        <!--Logo Image-->
        <ImageView
            android:id="@+id/imageView"
            android:gravity="center"
            android:layout_width="@dimen/dp_169"
            android:layout_height="@dimen/dp_76"
            android:layout_marginTop="@dimen/dp_30"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.06"
            app:srcCompat="@drawable/logo"
            android:contentDescription="@string/logo" />

        <!--SignUp and SignIn Buttons-->
        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="@dimen/dp_200"
            android:layout_height="@dimen/dp_50"
            android:layout_marginTop="@dimen/dp_30"
            app:layout_constraintEnd_toEndOf="parent"
            android:background="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView"
            android:outlineAmbientShadowColor="@color/white"
            android:outlineSpotShadowColor="@color/white">

            <Button
                android:id="@+id/signUpButton"
                android:layout_width="@dimen/dp_100"
                android:layout_height="@dimen/dp_50"
                android:background="@drawable/left_rounded_sigin"
                android:text="@string/sign_up"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/sp_20"
                android:outlineAmbientShadowColor="@color/white"
                android:outlineSpotShadowColor="@color/white" />

            <Button
                android:id="@+id/signInButton"
                android:layout_width="@dimen/dp_100"
                android:layout_height="@dimen/dp_50"
                android:layout_marginStart="@dimen/dp_100"
                android:background="@drawable/right_rounded_signin"
                android:text="@string/sign_in"
                android:textColor="@color/white"
                android:textSize="@dimen/sp_20"
                android:outlineAmbientShadowColor="@color/white"
                android:outlineSpotShadowColor="@color/white"/>
        </androidx.cardview.widget.CardView>

        <!--Welcome Back TextView-->
        <TextView
            android:id="@+id/textView"
            android:layout_width="@dimen/dp_257"
            android:layout_height="@dimen/dp_53"
            android:layout_marginTop="@dimen/dp_30"
            android:text="@string/welcome"
            android:gravity="center"
            android:textColor="@color/red"
            android:textSize="@dimen/sp_20"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardView" />

        <!--Enter Email Text Input-->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout"
            android:layout_width="@dimen/dp_350"
            android:gravity="center"
            android:layout_height="@dimen/dp_49"
            android:layout_marginTop="@dimen/dp_30"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:inputType="textEmailAddress"
                android:drawableStart="@drawable/enter_email"
                android:drawablePadding="@dimen/dp_5"
                android:layout_height="match_parent"
                android:hint="@string/enter_email" />
        </com.google.android.material.textfield.TextInputLayout>

        <!--Enter Password Text Input-->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout2"
            android:layout_width="@dimen/dp_350"
            android:gravity="center"
            android:layout_height="@dimen/dp_49"
            android:layout_marginTop="@dimen/dp_30"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textPassword"
                android:drawableStart="@drawable/pass2"
                android:drawablePadding="@dimen/dp_5"
                android:hint="@string/enter_password"
                android:textColorHint="@color/colorPrimary"/>
        </com.google.android.material.textfield.TextInputLayout>

        <!--SignIn Button-->
        <Button
            android:id="@+id/button"
            android:layout_width="@dimen/dp_162"
            android:layout_height="@dimen/dp_71"
            android:layout_marginTop="@dimen/dp_30"
            android:layout_weight="1"
            android:background="@drawable/rounded_button"
            android:fontFamily="@font/abel"
            android:gravity="center"
            android:text="@string/sign_in"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_30"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.51"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout2" />

        <!--Not Registered and Create Account TextView in CardView-->
        <androidx.cardview.widget.CardView
            android:id="@+id/cardView3"
            android:layout_width="@dimen/sp_296_2"
            android:layout_height="@dimen/dp_25"
            android:layout_marginTop="@dimen/dp_10"
            android:background="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button"
            android:outlineAmbientShadowColor="@color/white"
            android:outlineSpotShadowColor="@color/white">
        <!--Not Registered TextView-->
        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/not_registered"
            android:textSize="@dimen/sp_20" />

        <!--Create Account TextView-->
        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/sp_154"
            android:paddingEnd="@dimen/dp_0"
            android:gravity="center"
            android:text="@string/create_account"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/sp_20"
            android:textStyle="bold" />
        </androidx.cardview.widget.CardView>

        <!--Extra Space for better Look-->
        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_20"
            android:text=""
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardView3" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>